--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+#telaInicial {
+    background: url(../img/bg_inicial.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#usuario {
+    outline: none;
+}
+
 #campoDigitacao {
     resize: none;
     outline: none;
@@ -14,4 +29,9 @@
 
 #buttons button {
     border-radius: 100%;
+    background-color: #0068aa;
+}
+
+.disabled {
+    background-color: #303C58 !important;
 }
