--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "AntaRegular", sans-serif;
+}
+
+@font-face {
+    font-family: "AntaRegular";
+    src: url(../fonts/Anta-Regular.ttf) format('truetype');
 }
 
 #telaInicial {
@@ -39,4 +45,25 @@
 
 .disabled {
     background-color: #303C58 !important;
+}
+
+#placar {
+    height: 100%;
+    overflow-y: auto; 
+}
+
+#placar::-webkit-scrollbar {
+    width: 8px;
+    height: 8px; 
+}
+/* 
+#placarr::-webkit-scrollbar-track 
+    background: #f5f5f5;  
+    border-radius: 10px;  
+} 
+*/
+
+#placar::-webkit-scrollbar-thumb {
+    background-color: #ffffff; /* color of the scroll thumb */
+    border-radius: 10px; /* roundness of the scroll thumb */
 }
